Responsiveness erros resolved

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                             <p>Age : <span>21 years</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Website : <span>www.domain.com</span></p>
+                                            <p>Website : <span>Soon To Be Updated</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Email : <span>ajsings2001@gmail.com</span></p>
@@ -108,17 +108,17 @@
                                 <div class="skills padd-15">
                                     <div class="row">
                                         <div class="skill-item padd-15">
-                                            <h5>JS</h5>
+                                            <h5>Core Java</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 58%;"></div>
-                                                <div class="skill-percent">58%</div>
+                                                <div class="progress-in" style="width: 78%;"></div>
+                                                <div class="skill-percent">78%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5>PHP</h5>
+                                            <h5>HTML</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 66%;"></div>
-                                                <div class="skill-percent">66%</div>
+                                                <div class="progress-in" style="width: 90%;"></div>
+                                                <div class="skill-percent">90%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
@@ -129,10 +129,10 @@
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5>HTML</h5>
+                                            <h5>JavaScript</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 96%;"></div>
-                                                <div class="skill-percent">96%</div>
+                                                <div class="progress-in" style="width: 60%;"></div>
+                                                <div class="skill-percent">60%</div>
                                             </div>
                                         </div>
                                     </div>
@@ -150,7 +150,7 @@
                                                         <i class="fa fa-calendar"></i>2021-2024
                                                     </h3>
                                                     <h4 class="timeline-title">Bachelor In Computer Engineering</h4>
-                                                    <p class="timeline-text">I have completed my engineering from SKN Sinhgad Institute of Technology and Science, Lonavala, Pune. I was the founder and president for the music club <a href="#">"Muzzics $ Harmonies"</a>. I have been exposed to the outer world there and I have been really looking forward to boost my carrer up now.</p>
+                                                    <p class="timeline-text">I am pursuing my engineering from "SKN Sinhgad Institute of Technology and Science, Lonavala, Pune". I am the founder and president for the music club <a href="#">"Muzzics $ Harmonies"</a>. I have been exposed to the outer world there and I have been really looking forward to boost my carrer up now. </p>
                                                 </div>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"> </div>
@@ -158,7 +158,7 @@
                                                         <i class="fa fa-calendar"></i>2018-2019
                                                     </h3>
                                                     <h4 class="timeline-title">Senior School</h4>
-                                                    <p class="timeline-text">I have completed mt senior school education from the same school. I acquired a bunch of skills during this period of time like speaking fluent english, learning about computer science, and most important major life lessons. </p>
+                                                    <p class="timeline-text">I have completed my senior school education from the same school. I acquired a bunch of skills during this period of time like speaking fluent english, learning about computer science, and most important major life lessons. </p>
                                                 </div>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"> </div>
@@ -167,7 +167,7 @@
                                                     </h3>
                                                     <h4 class="timeline-title">Secondary School</h4>
                                                     <p class="timeline-text">I have completed my secondary school education from Central Academy Senior Secondary School, Bapu Nagar, Bhilwara.
-                                                    I learnt a lot from this experience fro my schooling.
+                                                    I learnt a lot from this experience for my schooling.
                                                     </p>
                                                 </div>
                                             </div>
@@ -186,7 +186,7 @@
                                                     </h3>
                                                     <h4 class="timeline-title">Web Development Intern</h4>
                                                     <h4 class="timeline-company">Oasis Ibfobyte</h4>
-                                                    <p class="timeline-text">I have learnt various aspects of industry and made various projects like landing page for college's music club, a personal Portfolio website and a temperature converter web application ussing HTML, CSS and Java0Script.
+                                                    <p class="timeline-text">I have learnt various aspects of industry and made various projects like landing page for college's music club, a personal Portfolio website and a temperature converter web application ussing HTML, CSS and JavaScript.
                                                     <div class="Intern-skills"> <span>Skills - </span> HTML , CSS , JS</div>    
                                                     </p>
                                                 </div>
@@ -198,7 +198,7 @@
                                                     <h4 class="timeline-title">Java Development Intern</h4>
                                                     <h4 class="timeline-company">TechnoHacks Edutech </h4>
                                                     <p class="timeline-text">
-                                                    I have learnt about Java Development and got exposed to the industrial side. I have learnt concepts of OOPS like encapsulation, polymorphism etc. and about loops and arrays and data structures. It was a one month experience and I enjoyed it a lot.
+                                                    I have learnt about Java Development and got exposed to the industrial side. I have learnt concepts of OOPS like encapsulation, polymorphism,  etc., MultiThreading, JDBC Connectivity, Exception Handling and about loops and arrays and data structures. It was a one month experience and I enjoyed it a lot.
                                                     I have completed projects like number guessing game , Tic-Tac-Toe etc.
                                                     <div class="Intern-skills">     <span>Skills -</span> Java</div>
                                                     </p>
@@ -225,8 +225,13 @@
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt "></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi veritatis adipisci a!
+                                <h4>FrontEnd Development</h4>
+                                <p>
+                                    <ul>
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>JavaScript</li>
+                                    </ul>
                                 </p>
                             </div>
                         </div>
@@ -235,8 +240,13 @@
                                 <div class="icon">
                                     <i class="fa fa-laptop-code "></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi veritatis adipisci a!
+                                <h4>Programming Languages</h4>
+                                <p>
+                                    <ul>
+                                        <li>Java</li>
+                                        <li>Python(Beginner)</li>
+                                        <li>C++(Beginner)</li>
+                                    </ul>
                                 </p>
                             </div>
                         </div>
@@ -245,8 +255,13 @@
                                 <div class="icon">
                                     <i class="fa fa-palette "></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi veritatis adipisci a!
+                                <h4>Design & Production</h4>
+                                <p>
+                                    <ul>
+                                        <li>PhotoShop</li>
+                                        <li>Canva</li>
+                                        <li>FL Studion</li>
+                                    </ul>
                                 </p>
                             </div>
                         </div>
@@ -255,8 +270,12 @@
                                 <div class="icon">
                                     <i class="fa fa-code "></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi veritatis adipisci a!
+                                <h4>Backend Developement</h4>
+                                <p>
+                                    <ul>
+                                        <li>Node JS (Beginner)</li>
+                                        <li>PHP (Beginner)</li>
+                                    </ul>
                                 </p>
                             </div>
                         </div>
@@ -265,8 +284,12 @@
                                 <div class="icon">
                                     <i class="fa fa-search"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi veritatis adipisci a!
+                                <h4>DataBases</h4>
+                                <p>                   
+                                    <ul>
+                                        <li>My SQL</li>
+                                        <li>Mongo DB</li>
+                                    </ul>
                                 </p>
                             </div>
                         </div>
@@ -275,8 +298,12 @@
                                 <div class="icon">
                                     <i class="fa fa-bullhorn "></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi veritatis adipisci a!
+                                <h4>Operating System</h4>
+                                <p>
+                                    <ul>
+                                        <li>Windows</li>
+                                        <li>Linux</li>
+                                    </ul>
                                 </p>
                             </div>
                         </div>
@@ -354,17 +381,17 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
                             <h4>Call Us On</h4>
-                            <p>+91 9414103716</p>
+                            <p>+91 94141-03716</p>
                         </div>
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope "></i></div>
                             <h4>Email</h4>
-                            <p>Info@gmail.com</p>
+                            <p>ajsings2001@gmail.com</p>
                         </div>
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-globe-europe"></i></div>
                             <h4>Website</h4>
-                            <p>www.website.com</p>
+                            <p>Soon To Be Updated</p>
                         </div>
                     </div>
                     <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
