--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
                                 <div class="icon">
                                     <i class="fa fa-palette "></i>
                                 </div>
-                                <h4>Design & Production</h4>
+                                <h4>Frameworks</h4>
                                 <p>
                                     <ul>
-                                        <li>PhotoShop</li>
-                                        <li>Canva</li>
-                                        <li>FL Studion</li>
+                                        <li>Angular JS</li>
+                                        <li>Spring</li>
+                                        <li>Hibernate</li>
                                     </ul>
                                 </p>
                             </div>
@@ -273,8 +273,8 @@
                                 <h4>Backend Developement</h4>
                                 <p>
                                     <ul>
+                                        <li>Spring Boot</li>
                                         <li>Node JS (Beginner)</li>
-                                        <li>PHP (Beginner)</li>
                                     </ul>
                                 </p>
                             </div>
@@ -326,21 +326,21 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Images/Portfolio.png" alt="">
+                                   <a href="https://abhinandanjain27.github.io/toDoList/t"> <img src="Images/To-Do-List.png" alt=""></img></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Images/Portfolio.png" alt="">
+                                    <img src="Images/AirlinesManagment.png" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Images/Portfolio.png" alt="">
+                                    <a href="https://abhinandanjain27.github.io/Muzzics-And-Hormonies/"><img src="Images/Portfolio.png" alt=""></a>
                                 </div>
                             </div>
                         </div>
